@@ -4,4 +4,5 @@ libomusincludedir = $(includedir)/om
 libomusinclude_HEADERS = om.h \
 omstem.h \
 omerror.h omtypes.h omenquire.h omdocument.h \
-omdatabase.h omindexdoc.h omsettings.h omoutput.h
+omdatabase.h omindexdoc.h omsettings.h omoutput.h \
+ompostlistiterator.h
